--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <p>建議做法：</p>
             <ol>
                 <li>先掌握基礎 CSS 後，再學習 SASS 或 LESS 這類預處理器，提升樣式開發效率。</li>
-                <li>善用CSS-Tricks等資源，了解常見版型技巧。</li>
+                <li>善用<a href="">CSS-Tricks</a>等資源，了解常見版型技巧。</li>
             </ol>
             <h3>JavaScript 核心觀念</h3>
             <p>為何重要：互動效果、資料處理、前端邏輯都仰賴 JavaScript。</p>
@@ -76,12 +76,12 @@
                 <li>Vue：上手容易、檔案結構直覺，適合對「漸進式開發」有興趣的開發者。</li>
             </ul>
             <p class="note">TIP：可以先看官方文件或跟著基礎教學做出小專案，感受哪個框架更順手。</p>
-            <p>版本控制、協作與建置</p>
+            <h3>版本控制、協作與建置</h3>
             <ul>
                 <li>Git 與 GitHub：一定要掌握分支、Pull Request、Code Review 等流程，並熟悉 Git Flow 或 Trunk Based Development。</li>
                 <li>打包工具：了解 Webpack、Vite、Parcel 等常見工具的基本原理與設定，對於優化與部署大有幫助。</li>
             </ul>
-            <p>自動化測試與最佳實踐</p>
+            <h3>自動化測試與最佳實踐</h3>
             <ul>
                 <li>測試框架：Jest、Mocha、Cypress 等，建立單元測試與 E2E 測試思維。</li>
                 <li>程式結構與品質：遵循程式風格 (Lint)、維持命名規範、模組化思考，確保專案可維護。</li>
@@ -95,7 +95,7 @@
             <h3>多參加前端挑戰 / Hackathon</h3>
             <ul>
                 <li>在實作中快速累積經驗，也能認識更多同好。</li>
-                <li>像是Frontend Mentor提供多種真實設計稿，可練習切版與互動。</li>
+                <li>像是<a href="">Frontend Mentor</a> 提供多種真實設計稿，可練習切版與互動。</li>
             </ul>
             <h3>打造個人作品集網站</h3>
             <ul>
